Update React Slick

--- a/src/containers/HomePage/HomeHeader/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader/HomeHeader.scss
@@ -60,18 +60,34 @@
 
       .language-vi {
         cursor: pointer;
+        opacity: 0.2;
 
         &.active {
-          color: orange;
+          opacity: 1;
+          span {
+            color: orange;
+          }
+        }
+
+        &:hover {
+          opacity: 0.8;
         }
       }
 
       .language-en {
         margin: 0 10px;
         cursor: pointer;
+        opacity: 0.2;
 
         &.active {
-          color: blue;
+          opacity: 1;
+          span {
+            color: blue;
+          }
+        }
+
+        &:hover {
+          opacity: 0.8;
         }
       }
     }
@@ -133,6 +149,7 @@
   }
   .content-down {
     height: 35%;
+    padding-bottom: 10px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
