--- a/src/containers/HomePage/Section/Specialty.scss
+++ b/src/containers/HomePage/Section/Specialty.scss
@@ -1,14 +1,13 @@
 .section-specialty {
   height: 330px;
   background: #f5f5f5;
-  border: 1px solid red;
 
-  .specialty-container {
+  .section-container {
     margin: 0 100px;
     display: flex;
     flex-direction: column;
 
-    .specialty-header {
+    .section-header {
       height: 60px;
       margin-bottom: 30px;
       padding-top: 30px;
@@ -36,8 +35,8 @@
       }
     }
 
-    .specialty-body {
-      .specialty-customize {
+    .section-body {
+      .section-customize {
         .bg-image {
           width: 325px;
           height: 200px;
@@ -46,39 +45,6 @@
           background-repeat: no-repeat;
           background-color: #eee;
           background-size: cover;
-        }
-      }
-
-      // reset slick slider css
-      .slick-prev {
-        //   position: relative !important;
-        left: -10 !important;
-        z-index: 1000;
-        height: 48px !important;
-        width: 48px !important;
-        background: #fff !important;
-        border: 2px solid #eceaea !important;
-
-        &:hover {
-          background-color: #eceaea !important;
-        }
-      }
-      .slick-prev:before,
-      .slick-next:before {
-        font-family: 'FontAwesome' !important;
-        color: red !important;
-        //   content: '\e257' !important;
-      }
-      .slick-next {
-        right: -10 !important;
-        z-index: 1000;
-        height: 48px !important;
-        width: 48px !important;
-        background: #fff !important;
-        border: 2px solid #eceaea !important;
-
-        &:hover {
-          background-color: #eceaea !important;
         }
       }
     }
