--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -22,6 +22,10 @@
   }
 
   .languages {
+    .welcome {
+      margin-right: 10px;
+    }
+
     .language-en {
       margin-right: 15px;
       margin-left: 10px;
