--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -65,7 +65,7 @@
         }
 
         &.section-outstanding-doctor {
-          background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bac-si.jpg');
+          // background-image: url('../../assets/outstanding-doctor/anh-dai-dien-bac-si.jpg');
           width: 120px;
           height: 120px;
           border-radius: 50%;
