--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -12,12 +12,14 @@
     background-color: #eceaea !important;
   }
 }
+
 .slick-prev:before,
 .slick-next:before {
   font-family: 'FontAwesome' !important;
   color: red !important;
   //   content: '\e257' !important;
 }
+
 .slick-next {
   right: -10 !important;
   z-index: 1000;
@@ -29,6 +31,10 @@
   &:hover {
     background-color: #eceaea !important;
   }
+}
+
+.slick-disabled {
+  display: none !important;
 }
 
 .section-share {
@@ -128,7 +134,7 @@
     padding: 5px;
 
     .customize-border {
-      border: 1px solid orange;
+      border: 2px solid #ddd;
       padding: 20px;
     }
   }
