--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -31,6 +31,10 @@
   }
 }
 
+.slick-disabled {
+  display: none !important;
+}
+
 .section-share {
   &.section-specialty {
     background: #f5f5f5;
@@ -128,7 +132,7 @@
     padding: 5px;
 
     .customize-border {
-      border: 1px solid orange;
+      border: 2px solid #ddd;
       padding: 20px;
     }
   }
