--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -1,10 +1,10 @@
 .doctor-detail-container {
   height: 500px;
-  border: 1px solid red;
-  margin: 0 100px;
+  // padding: 0 100px;
 
   .intro-doctor {
     display: flex;
+    margin: 0 100px;
 
     .content-left {
       width: 120px;
@@ -27,5 +27,25 @@
         padding-top: 10px;
       }
     }
+  }
+  .detail-info-doctor {
+    border: 1px solid #ddd;
+    padding: 20px 100px;
+    background-color: #f9f9f9;
+    margin-bottom: 20px;
+
+    h2 {
+      font-size: 18px;
+    }
+    h3 {
+      font-size: 16px;
+    }
+
+    img {
+      width: 100%;
+    }
+  }
+  .comment-doctor {
+    height: 50px;
   }
 }
