--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -28,6 +28,21 @@
       }
     }
   }
+
+  .schedule-doctor {
+    margin: 0 100px;
+    display: flex;
+    height: 200px;
+    border: 1px solid red;
+
+    .content-left {
+      width: 50%;
+    }
+    .content-right {
+      width: 50%;
+    }
+  }
+
   .detail-info-doctor {
     border: 1px solid #ddd;
     padding: 20px 100px;
@@ -45,6 +60,7 @@
       width: 100%;
     }
   }
+
   .comment-doctor {
     height: 50px;
   }
