--- a/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -1,6 +1,6 @@
 .doctor-schedule-container {
   height: 100%;
-  border-right: 1px solid green;
+  border-right: 1px solid #ddd;
 
   .all-schedule {
     select {
@@ -32,23 +32,35 @@
     }
 
     .time-content {
-      display: flex;
-      gap: 15px;
-      flex-wrap: wrap;
+      .time-content-btns {
+        display: flex;
+        gap: 15px;
+        flex-wrap: wrap;
 
-      button {
-        padding: 10px 10px;
-        border: none;
-        outline: none;
-        background-color: #fff014;
-        min-width: 120px;
-        border-radius: 5px;
-        font-weight: 600;
-        color: #333;
+        button {
+          padding: 7px 10px;
+          border: none;
+          outline: none;
+          background-color: #fff014;
+          border-radius: 5px;
+          font-weight: 600;
+          color: #333;
 
-        &:hover {
-          background-color: #45c3d2;
-          color: white;
+          &:hover {
+            background-color: #45c3d2;
+            color: white;
+          }
+        }
+
+        .btn-vie {
+          min-width: 120px;
+        }
+        .btn-en {
+          min-width: 160px;
+        }
+        .no-schedule {
+          font-style: italic;
+          font-size: 16px;
         }
       }
     }
