--- a/src/containers/Patient/Doctor/DoctorExtraInfor.scss
+++ b/src/containers/Patient/Doctor/DoctorExtraInfor.scss
@@ -21,4 +21,48 @@
             color: #333;
         }
     }
+
+    .content-down {
+        .short-infor {
+            span {
+                cursor: pointer;
+                color: cyan;
+            }
+        }
+
+        .title-price {
+            margin-bottom: 10px;
+        }
+
+        .detail-infor {
+            border: 2px solid #ddd;
+            padding: 5px;
+            background-color: #f8f8f8;
+
+            .price {
+                padding-bottom: 5px;
+
+                .right {
+                    float: right;
+                }
+            }
+
+            .note {}
+        }
+
+        .payment {
+            border: 2px solid #ddd;
+            padding: 5px;
+            background-color: #eee;
+        }
+
+        .hide-price {
+            margin-top: 10px;
+
+            span {
+                cursor: pointer;
+                color: cyan;
+            }
+        }
+    }
 }
