--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -11,6 +11,7 @@
       height: 120px;
       border-radius: 50%;
       margin: 10px 20px;
+      background: center center no-repeat;
     }
     .content-right {
       width: 80%;
