--- a/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -3,10 +3,12 @@
     display: flex;
 
     .content-left {
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
       width: 80px;
       height: 80px;
       border-radius: 50%;
-      background: center center none;
     }
     .content-right {
       width: calc(100% - 80px);
