--- a/src/containers/HomePage/Section/Specialty.scss
+++ b/src/containers/HomePage/Section/Specialty.scss
@@ -40,13 +40,25 @@
         .bg-image {
           width: 325px;
           height: 200px;
-          background: url('../../../assets/specialty/co-xuong-khop.jpg');
           background-position: center center;
           background-repeat: no-repeat;
           background-color: #eee;
           background-size: cover;
         }
       }
+    }
+  }
+}
+
+.specialty-child {
+  cursor: pointer;
+
+  .specialty-name {
+    padding: 10px 0;
+    font-size: 16px;
+
+    &:hover {
+      color: #45c3d2;
     }
   }
 }
