--- a/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -1,6 +1,7 @@
 .doctor-schedule-container {
   height: 100%;
   border-right: 1px solid #ddd;
+  // min-height: 250px;
 
   .all-schedule {
     select {
@@ -45,6 +46,7 @@
           border-radius: 5px;
           font-weight: 600;
           color: #333;
+          margin-bottom: 5px;
 
           &:hover {
             background-color: #45c3d2;
