--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -1,27 +1,46 @@
 .detail-specialty-container {
-    .description-specialty {
-        border: 1px solid red;
-        height: 250px;
+  .description-specialty {
+    border: 1px solid red;
+    height: 250px;
+  }
+
+  .detail-specialty-body {
+    margin: 0 100px;
+  }
+  .each-doctor {
+    display: flex;
+    min-height: 300px;
+    width: 100%;
+    margin: 15px 0;
+    padding: 10px;
+    background-color: #fff;
+    box-shadow: 0 1px 6px #20212447;
+    border-radius: 10px;
+
+    .dt-content-left {
+      width: 50%;
+      border-right: 1px solid #ddd;
     }
 
-    .each-doctor {
-        display: flex;
-        min-height: 300px;
-        width: 100%;
-        margin: 20px 0;
-        border: 1px solid green;
+    .dt-content-right {
+      width: 50%;
+      padding: 10px;
 
-
-        .content-left {
-            width: 50%;
+      .doctor-schedule {
+        .doctor-schedule-container {
+          border-right: unset !important;
         }
+      }
 
-        .content-right {
-            width: 50%;
+      .doctor-extra-info {
+        border-top: 1px solid #ddd;
+        margin-top: 10px;
+        padding-top: 10px;
 
-            .doctor-schedule {}
-
-            .doctor-extra-info {}
+        .doctor-extra-infor-container {
+          padding-left: 0 !important;
         }
+      }
     }
+  }
 }
