--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -1,7 +1,9 @@
 .detail-specialty-container {
   .description-specialty {
     border: 1px solid red;
-    height: 250px;
+  }
+
+  .search-sp-doctor {
   }
 
   .detail-specialty-body {
