--- a/src/containers/Patient/Specialty/DetailSpecialty.scss
+++ b/src/containers/Patient/Specialty/DetailSpecialty.scss
@@ -1,13 +1,32 @@
 .detail-specialty-container {
+  background-color: #d5e8f7;
+
   .description-specialty {
-    border: 1px solid red;
+    background-color: white !important;
+    padding: 10px;
+    margin: 15px 0;
+    border-radius: 10px;
+
+    h2 {
+    }
   }
 
   .search-sp-doctor {
+    select {
+      height: 30px;
+      padding: 5px 10px;
+      border: none;
+      outline: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   }
 
   .detail-specialty-body {
-    margin: 0 100px;
+    padding: 0 100px;
+    background-color: #d5e8f7;
+    display: flex;
+    flex-direction: column;
   }
   .each-doctor {
     display: flex;
@@ -22,6 +41,12 @@
     .dt-content-left {
       width: 50%;
       border-right: 1px solid #ddd;
+
+      .profile-doctor-container {
+        .down {
+          padding-right: 25px;
+        }
+      }
     }
 
     .dt-content-right {
