--- a/src/containers/System/Doctor/ManagePatient.scss
+++ b/src/containers/System/Doctor/ManagePatient.scss
@@ -55,6 +55,13 @@
         border-radius: 5px;
         background: orange;
       }
+      .mp-btn-cancel {
+        margin-right: 10px;
+        height: 30px;
+        border-radius: 5px;
+        background: red;
+        color: white;
+      }
     }
   }
 }
